# plasma-superbar-cxx

./: CMakeLists.txt
applet/: Applet.cpp  Applet.h  CMakeLists.txt  TaskButton.cpp  TaskButton.h  launcher_button.cpp  launcher_button.h  main.cpp  plasma-applet-superbar-cxx.desktop
